--- a/app/Src/DetailScreen1.fx.yaml
+++ b/app/Src/DetailScreen1.fx.yaml
@@ -157,6 +157,16 @@ DetailScreen1 As screen:
         Y: =63
         ZIndex: =8
 
+    Icon4 As icon.Send:
+        Color: =RGBA(56, 96, 178, 1)
+        Height: =50
+        Icon: =Icon.Send
+        OnSelect: =Navigate(SendOut)
+        Width: =46
+        X: =1000
+        Y: =67
+        ZIndex: =13
+
     DeletePopup As group:
         Height: =5
         Width: =5
