--- a/app/Src/DetailScreen1.fx.yaml
+++ b/app/Src/DetailScreen1.fx.yaml
@@ -161,7 +161,7 @@ DetailScreen1 As screen:
         Color: =RGBA(56, 96, 178, 1)
         Height: =50
         Icon: =Icon.Send
-        OnSelect: =Navigate(SendOut)
+        OnSelect: =Navigate(SendOutScreen)
         Width: =46
         X: =1000
         Y: =67
